Edit mobile viewport overflow issue

--- a/client/src/css/post.module.scss
+++ b/client/src/css/post.module.scss
@@ -61,7 +61,7 @@
         div {
           margin: 0 auto;
           text-align: center;
-
+          overflow: hidden;
           > p,
           > button {
             display: inline-block;
